# adjust_task

./: .pre-commit-config.yaml  Makefile  README.md  cli.py  config.py  pyproject.toml
api/: app.py  schemas.py
db_files/: database.db
orm/: models.py  session.py
