[tool.poetry]
name = "adjust_task"
version = "0.1.0"
description = ""
authors = ["germn <Gerasimov-M-N@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.18"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
click = "^8.0.1"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
